--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "three": "^0.145.0",
+    "troika-three-text": "^0.46.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
